--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <div class="fila superior">
      <p><img src="iconoweno.jpg"><h1> BicisVal </h1><p>
-       <p>TRADUCIR</p>
+       <p>TRADUCIR mal</p>
     </div>
     <nav>
         <ul>
